--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,10 @@
 eclipse.preferences.version=1
+encoding//src/cargo/java=UTF-8
+encoding//src/core/java=UTF-8
 encoding//src/core/java/com/polarj/model/UserAccount.java=UTF-8
+encoding//src/hwcargo/java=UTF-8
+encoding//src/main/java=UTF-8
+encoding//src/main/resources=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/workflow/java=UTF-8
 encoding/<project>=UTF-8
